# Vision2020

./: CMakeLists.txt  README.md  index.html  run.sh
include/: Config.hpp  Contour.hpp  Setting.hpp  Thread.hpp  UDPHandler.hpp
include/MJPEGWriter/: MJPEGWriter.h
resources/: config.yaml
src/: Contour.cpp  MJPEGWriter.cpp  Thread.cpp  UDPHandler.cpp  main.cpp
